--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
     </section>
     
     <!-- Rest of your webpage content goes here -->
-    
+    <footer>
+  <div class="contact">
+    <h4>Contact Us</h4>
+    <p>Email: abikirkham1@gmail.com</p>
+    <p>Phone: 07516390312 </p>
+  </div>
+
+  <div class="address-media">
+    <h4>Follow Us</h4>
+    <ul>
+      <li><a href="#" target="_blank">LinkedIn</a></li>
+      <li><a href="#" target="_blank">GitHub</a></li>
+      <li><a href="#" target="_blank">Instagram</a></li>
+    </ul>
+      <h4>Our Address</h4>
+    <p>Barcelona/Manchester</p>
+  </div>
+
+  <div class="newsletter">
+    <h4>Sign Up for Newsletter</h4>
+    <form action="#" method="post">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <button type="submit">Subscribe</button>
+    </form>
+  </div>
+</footer>
+
     </body>
     </html>
