--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <header>
-        <div>Abi WD</div>
+       <div class="logo-container">
+        <img src="path/to/your/logo.png" alt="Abi WD Logo">
+    </div>
         <nav>
             <a href="#">Home</a>
             <a href="#">Products</a>
