--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <li><a href="#" target="_blank">GitHub</a></li>
       <li><a href="#" target="_blank">Instagram</a></li>
     </ul>
-      <h4>Our Address</h4>
+      <h4>My Address</h4>
     <p>Barcelona/Manchester</p>
   </div>
 
