--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
        <div class="logo-container">
-        <img src="path/to/your/logo.png" alt="Abi WD Logo">
+        <img src="assets/images/aklogo.jpg" alt="Abi WD Logo">
     </div>
         <nav>
             <a href="#">Home</a>
