--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <!-- Rest of your webpage content goes here -->
     <footer>
   <div class="contact">
-    <h4>Contact Us</h4>
+    <h4>Contact Me Direct</h4>
     <p>Email: abikirkham1@gmail.com</p>
     <p>Phone: 07516390312 </p>
   </div>
 
   <div class="address-media">
-    <h4>Follow Us</h4>
+    <h4>Follow ME</h4>
     <ul>
       <li><a href="#" target="_blank">LinkedIn</a></li>
       <li><a href="#" target="_blank">GitHub</a></li>
