--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img src="assets/images/aklogo.jpg" alt="Abi WD Logo">
     </div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="service.html">Services</a>
-            <a href="#">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <div class="icon-container">&#9776;</div>
     </header>
@@ -30,21 +30,21 @@
         <div class="services">
             <div class="service-box">
                 <h2>Website Development</h2>
-                <img src="your_image_url.jpg" alt="Service Image" class="service-image">
-                <p>I create fully functional websites from scratch, handling UI design and responsive development using technologies like HTML, CSS, and JavaScript or frameworks such as React, Angular, or Vue.js.</p>
+                <img src="assets/images/webdev.jpg" alt="Service Image" class="service-image">
+                <p>I create fully functional websites from scratch, handling UI design and responsive development using technologies like HTML, CSS, and JavaScript or frameworks such as React, Python and C+.</p>
                 <a href="services.html"><button>Find Out More</button></a>
             </div>
     
             <div class="service-box">
               <h2>E-commerce Development</h2>
-              <img src="your_image_url.jpg" alt="Service Image" class="service-image">
-              <p>I provide ongoing support for websites, managing content updates, fixing bugs, and ensuring compatibility with the latest web standards. Regular maintenance enhances security, performance, and user experience.</p>
+              <img src="assets/images/ecom.jpg" alt="Service Image" class="service-image">
+              <p>Specialising in setting up online stores, I integrate payment gateways and implement e-commerce features such as catalogs, carts, and secure checkouts. I use known platforms or develop custom solutions based on the client's needs.</p>
               <a href="services.html"><button>Find Out More</button></a>
           </div>
           <div class="service-box">
             <h2>Maintenance and Updates</h2>
-            <img src="your_image_url.jpg" alt="Service Image" class="service-image">
-            <p>Specialising in setting up online stores, I integrate payment gateways and implement e-commerce features such as product catalogs, shopping carts, and secure checkout processes. I use platforms like Shopify, WooCommerce, or develop custom solutions based on the client's needs.</p>
+            <img src="assets/images/maintain.jpg" alt="Service Image" class="service-image">
+            <p>I provide ongoing support for websites, managing content updates, fixing bugs, and ensuring compatibility with the latest web standards. Regular maintenance enhances security, performance, and user experience.</p>
             <a href="services.html"><button>Find Out More</button></a>
         </div>
         </div>
@@ -72,17 +72,14 @@
     <h4>Contact Me Direct</h4>
     <h5>Email: abikirkham1@gmail.com</h5>
     <h5>Phone: 07516390312 </h5>
+    <h5>Location: Remote/ Mancester, UK</h5>
   </div>
 
   <div class="address-media">
     <h4>Follow Me</h4>
-    <ul>
-      <li><a href="#" target="_blank">LinkedIn</a></li>
-      <li><a href="#" target="_blank">GitHub</a></li>
-      <li><a href="#" target="_blank">Instagram</a></li>
-    </ul>
-      <h4>My Address</h4>
-    <h5>Barcelona/Manchester</h5>
+    <a href="https://uk.linkedin.com/" target="_blank"><img src="assets/images/linkedin.jpg" alt="LinkedIn" class="media-image small-image"></a>
+    <a href="https://github.com/abikirkham/Abi-WD" target="_blank"><img src="assets/images/github.jpg" alt="GitHub" class="media-image small-image"></a>
+    <a href="https://www.instagram.com/" target="_blank"><img src="assets/images/insta.jpg" alt="Instagram" class="media-image small-image"></a>
   </div>
 
   <div class="newsletter">
