--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
     <header>
        <div class="logo-container">
         <img src="assets/images/aklogo.jpg" alt="Abi WD Logo">
@@ -22,11 +21,14 @@
     </header>
     
     <main>
+      <img id="myImage" src="assets/images/landingakweb.jpg" alt="Background Image">
+      <div class="landing">
         <h1>Welcome to My Website</h1>
         <p>Hello there! I'm Abi, a freelance full-stack developer ready to turn your digital dreams into reality. From sleek websites to dynamic web applications, I bring a holistic approach to web development.</p>
   <p>Explore my portfolio to see the diverse range of projects I've worked on. Let's embark on this coding journey together and transform your vision into a pixel-perfect reality!</p>
-  <p>Happy coding,<br>Abi,<br>Freelance Full Stack Developer</p></main>
+  <p>Happy coding,<br>Abi,<br>Freelance Full Stack Developer</p></main></div>
   <section>
+    
         <div class="services">
             <div class="service-box">
                 <h2>Website Development</h2>
