added another service

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <p>I provide ongoing support for websites, managing content updates, fixing bugs, and ensuring compatibility with the latest web standards. Regular maintenance enhances security, performance, and user experience.</p>
             <a href="services.html"><button>Find Out More</button></a>
         </div>
+        <div class="service-box">
+          <h2>Graphic design</h2>
+          <img src="assets/images/maintain.jpg" alt="Service Image" class="service-image">
+          <p>As a web developer, I offer a comprehensive service that seamlessly integrates cutting-edge web development with captivating graphic design to elevate your online presence and user experience.</p>
+           <a href="services.html"><button>Find Out More</button></a>
+      </div>
         </div>
     
     </section>
