--- a/Python.html
+++ b/Python.html
@@ -21,18 +21,85 @@
         <div class="icon-container">&#9776;</div>
     </header>
     
-   <main>Coming soon...
+   <main>
+    <div class="cheatsheet">
+<h2>Python Cheatsheet</h2>
+# Comments<br>
+# This is a single-line comment<br>
 
+"""<br>
+This is a<br>
+multi-line<br>
+comment<br>
+"""<br>
 
+# Variables and Data Types<br>
+variable_name = 10<br>
+string_variable = "Hello, World!"<br>
+float_variable = 3.14<br>
+boolean_variable = True<br>
 
+# Print<br>
+print("Hello, World!")<br>
 
-    <section>
-      <h2>Tools and resources</h2>
-      <a href="html.html">HTML Cheatsheet</a>
-      <a href="css.html">CSS Cheatsheet</a>
-      <a href="Java.html">JavaScript Cheatsheet</a>
-      <a href="Python.html">Python Cheatsheet</a>
-    </section>
+# Input<br>
+user_input = input("Enter something: ")<br>
+
+# Operators<br>
+x = 5<br>
+y = 2<br>
+sum_result = x + y<br>
+difference_result = x - y<br>
+product_result = x * y<br>
+quotient_result = x / y<br>
+remainder_result = x % y<br>
+power_result = x ** y<br>
+
+# Strings<br>
+string1 = "Hello"<br>
+string2 = "World"<br>
+concatenated_string = string1 + " " + string2<br>
+formatted_string = f"{string1} {string2}"<br>
+
+# Lists<br>
+my_list = [1, 2, 3, "apple", "banana"]<br>
+list_length = len(my_list)<br>
+list_append = my_list.append(4)<br>
+list_remove = my_list.remove("apple")<br>
+
+# Conditions<br>
+if x > y:<br>
+    print("x is greater than y")<br>
+elif x < y:<br>
+    print("x is less than y")<br>
+else:<br>
+    print("x is equal to y")<br>
+
+# Loops<br>
+for i in range(5):<br>
+    print(i)<br>
+
+while x > 0:<br>
+    print(x)<br>
+    x -= 1<br>
+
+# Functions<br>
+def greet(name):<br>
+    return f"Hello, {name}!"<br>
+
+result = greet("Alice")<br>
+
+# Classes<br>
+class MyClass:<br>
+    def __init__(self, attribute):<br>
+        self.attribute = attribute<br>
+
+    def display_attribute(self):<br>
+        print(self.attribute)<br>
+
+obj = MyClass("example")<br>
+obj.display_attribute()<br>
+</div>
    </main>
     
     <!-- Rest of your webpage content goes here -->
