--- a/css.html
+++ b/css.html
@@ -21,21 +21,137 @@
         <div class="icon-container">&#9776;</div>
     </header>
     
-   <main>Coming soon...
+   <main>
+<div class="cheatsheet">
+<h2>CSS Cheatsheet</h2>
+/* CSS Cheatsheet */<br>
 
+/* Universal Selector */<br>
+/* Resets margin and padding to 0 and includes box-sizing: border-box globally */<br>
+* {<br>
+  margin: 0;<br>
+  padding: 0;<br>
+  box-sizing: border-box;<br>
+}<br>
 
+/* Type Selector */<br>
+/* Styles all h1 elements with a larger font size */<br>
+h1 {<br>
+  font-size: 2em;<br>
+}<br>
 
+/* Class Selector */<br>
+/* Styles elements with the class "className" with a specific text color */<br>
+.className {<br>
+  color: #333;<br>
+}<br>
 
-    <section>
-      <h2>Tools and resources</h2>
-      <a href="html.html">HTML Cheatsheet</a>
-      <a href="css.html">CSS Cheatsheet</a>
-      <a href="Java.html">JavaScript Cheatsheet</a>
-      <a href="Python.html">Python Cheatsheet</a>
-    </section>
+/* ID Selector */<br>
+/* Styles the element with the ID "uniqueId" with a specific background color */<br>
+#uniqueId {<br>
+  background-color: #f0f0f0;<br>
+}<br>
+
+/* Descendant Selector */<br>
+/* Styles child elements inside parentElement with a border */<br>
+parentElement childElement {<br>
+  border: 1px solid #ccc;<br>
+}<br>
+
+/* Pseudo-class Selector */<br>
+/* Adds an underline to links on hover */<br>
+a:hover {<br>
+  text-decoration: underline;<br>
+}<br>
+
+/* Grouping Selector */<br>
+/* Applies bold font weight to h2, h3, and h4 elements */<br>
+h2, h3, h4 {<br>
+  font-weight: bold;<br>
+}<br>
+
+/* Text Styling */<br>
+/* Defines various text styling properties */<br>
+color: #333;<br>
+font-size: 16px;<br>
+font-family: 'Arial', sans-serif;<br>
+font-weight: normal;<br>
+line-height: 1.5;<br>
+text-align: center;<br>
+text-decoration: none;<br>
+text-transform: uppercase;<br>
+
+/* Box Model */<br>
+/* Defines properties related to the box model: width, height, margin, padding, border */<br>
+width: 100px;<br>
+height: 100px;<br>
+margin: 10px;<br>
+padding: 20px;<br>
+border: 1px solid #ccc;<br>
+box-sizing: border-box;<br>
+
+/* Display */<br>
+/* Defines how elements are displayed in the layout */<br>
+display: block;<br>
+display: inline;<br>
+display: inline-block;<br>
+display: flex;<br>
+display: grid;<br>
+display: none;<br>
+
+/* Positioning */<br>
+/* Defines the position and stacking order of elements */<br>
+position: static;<br>
+position: relative;<br>
+position: absolute;<br>
+position: fixed;<br>
+top: 10px;<br>
+right: 20px;<br>
+bottom: 30px;<br>
+left: 40px;<br>
+z-index: 1;<br>
+
+/* Background */<br>
+/* Defines background properties, including color, image, and positioning */<br>
+background-color: #f0f0f0;<br>
+background-image: url('image.jpg');<br>
+background-size: cover;<br>
+background-position: center;<br>
+background-repeat: no-repeat;<br>
+
+/* Flexbox */<br>
+/* Defines properties for flexible box layout */<br>
+display: flex;<br>
+flex-direction: row;<br>
+justify-content: space-between;<br>
+align-items: center;<br>
+
+/* Grid */<br>
+/* Defines properties for grid layout */<br>
+display: grid;<br>
+grid-template-columns: repeat(3, 1fr);<br>
+grid-gap: 10px;<br>
+
+/* Transitions and Animations */<br>
+/* Defines properties for smooth transitions and animations */<br>
+transition: property duration timing-function;<br>
+animation: name duration timing-function iteration-count direction;<br>
+
+/* Responsive Design */<br>
+/* Media query for smaller screens */<br>
+@media (max-width: 768px) {<br>
+  /* CSS rules for smaller screens */<br>
+}
+
+/* Comments */<br>
+/* This is a comment */<br>
+
+/* Importing External Stylesheets */<br>
+/* Imports an external stylesheet named 'external-stylesheet.css' */<br>
+@import url('external-stylesheet.css');<br>
+</div>
    </main>
     
-    <!-- Rest of your webpage content goes here -->
     <footer>
   <div class="contact2">
     <h4>Contact Me Direct</h4>
