--- a/html.html
+++ b/html.html
@@ -21,21 +21,92 @@
         <div class="icon-container">&#9776;</div>
     </header>
     
-   <main>Coming soon...
+   <main>
+    <div class="cheatsheet">
+    <h2>HTML Cheatsheet</h2>
+    &lt;!DOCTYPE html&gt;
+    <br>
+&lt;html lang="en"&gt;
+<br>
+&lt;head&gt;
+<br>
+    &lt;meta charset="UTF-8"&gt;
+    <br>
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    <br>
+    &lt;title&gt;HTML Cheat Sheet&lt;/title&gt;<br>
+&lt;/head&gt;<br>
+&lt;body&gt;<br>
 
+&lt;!-- Headings --&gt;<br>
+&lt;h1&gt;This is a Heading 1&lt;/h1&gt;<br>
+&lt;h2&gt;This is a Heading 2&lt;/h2&gt;<br>
+&lt;h3&gt;This is a Heading 3&lt;/h3&gt;<br>
 
+&lt;!-- Paragraphs --&gt;<br>
+&lt;p&gt;This is a paragraph.&lt;/p&gt;<br>
 
+&lt;!-- Links --&gt;<br>
+&lt;a href="https://www.example.com" target="_blank"&gt;Visit Example.com&lt;/a&gt;<br>
 
-    <section>
-      <h2>Tools and resources</h2>
-      <a href="html.html">HTML Cheatsheet</a>
-      <a href="css.html">CSS Cheatsheet</a>
-      <a href="Java.html">JavaScript Cheatsheet</a>
-      <a href="Python.html">Python Cheatsheet</a>
-    </section>
+&lt;!-- Images --&gt;<br>
+&lt;img src="image.jpg" alt="Description of the image"&gt;<br>
+
+&lt;!-- Lists --&gt;<br>
+&lt;ul&gt;<br>
+    &lt;li&gt;Unordered List Item 1&lt;/li&gt;<br>
+    &lt;li&gt;Unordered List Item 2&lt;/li&gt;<br>
+&lt;/ul&gt;<br>
+
+&lt;ol&gt;<br>
+    &lt;li&gt;Ordered List Item 1&lt;/li&gt;<br>
+    &lt;li&gt;Ordered List Item 2&lt;/li&gt;<br>
+&lt;/ol&gt;<br>
+
+&lt;!-- Forms --&gt;<br>
+&lt;form action="/submit-form" method="post"&gt;<br>
+    &lt;label for="username"&gt;Username:&lt;/label&gt;<br>
+    &lt;input type="text" id="username" name="username" required&gt;<br>
+
+    &lt;label for="password"&gt;Password:&lt;/label&gt;<br>
+    &lt;input type="password" id="password" name="password" required&gt;<br>
+
+    &lt;input type="submit" value="Submit"&gt;<br>
+&lt;/form&gt;<br>
+
+&lt;!-- Tables --&gt;<br>
+&lt;table border="1"&gt;<br>
+    &lt;thead&gt;<br>
+        &lt;tr&gt;<br>
+            &lt;th&gt;Header 1&lt;/th&gt;<br>
+            &lt;th&gt;Header 2&lt;/th&gt;<br>
+        &lt;/tr&gt;<br>
+    &lt;/thead&gt;<br>
+    &lt;tbody&gt;<br>
+        &lt;tr&gt;<br>
+            &lt;td&gt;Row 1, Cell 1&lt;/td&gt;<br>
+            &lt;td&gt;Row 1, Cell 2&lt;/td&gt;<br>
+        &lt;/tr&gt;<br>
+        &lt;tr&gt;<br>
+            &lt;td&gt;Row 2, Cell 1&lt;/td&gt;<br>
+            &lt;td&gt;Row 2, Cell 2&lt;/td&gt;<br>
+        &lt;/tr&gt;<br>
+    &lt;/tbody&gt;<br>
+&lt;/table&gt;<br>
+
+&lt;!-- Divisions --&gt;<br>
+&lt;div&gt;<br>
+    This is a division.<br>
+&lt;/div&gt;<br>
+
+&lt;!-- Comments --&gt;<br>
+&lt;!-- This is a comment --&gt;<br>
+
+&lt;/body&gt;<br>
+&lt;/html&gt;<br>
+</div>
    </main>
     
-    <!-- Rest of your webpage content goes here -->
     <footer>
   <div class="contact2">
     <h4>Contact Me Direct</h4>
