--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
     
             <div class="service-box">
               <h2>E-commerce Development</h2>
-              <img src="assets/images/ecom.jpg" alt="Service Image" class="service-image">
+              <img src="assets/images/ecommerce.jpg" alt="Service Image" class="service-image">
               <p>Specialising in setting up online stores, I integrate payment gateways and implement e-commerce features such as catalogs, carts, and secure checkouts. I use known platforms or develop custom solutions based on the client's needs.</p>
               <a href="services.html"><button>Find Out More</button></a>
           </div>
           <div class="service-box">
             <h2>Maintenance and Updates</h2>
-            <img src="assets/images/maintain.jpg" alt="Service Image" class="service-image">
+            <img src="assets/images/updates.jpg" alt="Service Image" class="service-image">
             <p>I provide ongoing support for websites, managing content updates, fixing bugs, and ensuring compatibility with the latest web standards. Regular maintenance enhances security, performance, and user experience.</p>
             <a href="services.html"><button>Find Out More</button></a>
         </div>
         <div class="service-box">
           <h2>Graphic design</h2>
-          <img src="assets/images/maintain.jpg" alt="Service Image" class="service-image">
+          <img src="assets/images/graphic.jpg" alt="Service Image" class="service-image">
           <p>As a web developer, I offer a comprehensive service that seamlessly integrates cutting-edge web development with captivating graphic design to elevate your online presence and user experience.</p>
            <a href="services.html"><button>Find Out More</button></a>
       </div>
       <div class="service-box">
         <h2>Tools + Resources</h2>
-        <img src="assets/images/ecom.jpg" alt="Service Image" class="service-image">
+        <img src="assets/images/tools.jpg" alt="Service Image" class="service-image">
         <p>Specialising in setting up online stores, I integrate payment gateways and implement e-commerce features such as catalogs, carts, and secure checkouts. I use known platforms or develop custom solutions based on the client's needs.</p>
         <a href="products.html"><button>Find Out More</button></a>
     </div>
