--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
  
     <div id="gallery-container">
       <h2>Services</h2>
-      <div id="rotator-container">
-          <div class="image-wrapper">
-              <img id="rotator-prev" src="" alt="Gallery Image">
-              <p id="image-text-prev"></p>
-          </div>
+      <div class="image-wrapper">
+        <h2 id="image-title-prev"></h2>
+        <img id="rotator-prev" src="" alt="Gallery Image">
+        <p id="image-text-prev"></p>
+    </div>
+    
+    <div class="image-wrapper">
+      <h2 id="image-title"></h2>
+        <img id="rotator" src="" alt="Gallery Image"> 
+        <p id="image-text"></p>
+    </div>
+    
+    <div class="image-wrapper">
+      <h2 id="image-title-next"></h2>
+        <img id="rotator-next" src="" alt="Gallery Image">
+        <p id="image-text-next"></p>
+    </div>
 
-          <div class="image-wrapper">
-              <img id="rotator" src="" alt="Gallery Image"> 
-              <p id="image-text"></p>
-         </div>
-
-          <div class="image-wrapper">
-              <img id="rotator-next" src="" alt="Gallery Image">
-              <p id="image-text-next"></p>
-          </div>
-
-      </div>
-
-      <button id="prev-button">Previous</button>
-      <button id="next-button">Next</button>
+ 
   </div>
-
+     <button id="prev-button">Previous</button>
+      <button id="next-button">Next</button>
 
 <br><br>
     <section class="contact">
