--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>Happy coding,<br>Abi,<br>Freelance Full Stack Developer</p></main></div>
  
     <div id="gallery-container">
-      <h2>Services</h2>
+      <h2><a href="services.html">Services</a></h2>
       <div class="image-wrapper">
         <h2 id="image-title-prev"></h2>
         <img id="rotator-prev" src="" alt="Gallery Image">
