--- a/services.html
+++ b/services.html
@@ -57,7 +57,32 @@
          <button id="prev-button">Previous</button>
           <button id="next-button">Next</button>
     
-    <br><br><br>
+    <br>
+    <div id="testimonials-container">
+      <h2>Testimonials</h2>
+  
+      <div class="testimonial-wrapper" id="testimonial-prev">
+          <h2></h2>
+          <p id="testimonial-text"></p>
+      </div>
+  
+      <div class="testimonial-wrapper" id="testimonial">
+          <h2></h2>
+          <p id="testimonial-text"></p>
+      </div>
+  
+      <div class="testimonial-wrapper" id="testimonial-next">
+          <h2></h2>
+          <p id="testimonial-text"></p>
+      </div>
+  
+      <div id="testimonial-buttons">
+          <button id="prev-testimonial-button">Previous</button>
+          <button id="next-testimonial-button">Next</button>
+      </div>
+  </div>
+  
+  <br><br>
     
     <!-- Rest of your webpage content goes here -->
     <footer>
